fixed the spacing of the body and elfsight hours on abc

--- a/src/Presentation/Nop.Web/Themes/Pavilion/Content/css/768.css
+++ b/src/Presentation/Nop.Web/Themes/Pavilion/Content/css/768.css
@@ -945,6 +945,12 @@ input.button-1.search-box-button {
     margin-left: 20px;
 	margin-top: 8px;
 }
+
+@media (max-width: 1024px) {
+.storeId3 .elfsight-app-0939552e-738a-40b7-99ae-c6b3a185dada {
+    margin-top: 30px;
+}
+}
 body .header-menu>ul>li>a>span {
 	font-size: 13px;
 }
